@@ -1,3 +1,7 @@
+2012-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/xetex.am (EXTRA_DIST): Drop pool2c.pl (is removed).
+
 2012-05-05  Khaled Hosny  <khaledhosny@eglug.org>
 
 	* xetex.ch, xetex.defines, XeTeX_ext.h, am/xetex.am: Use makecpool
